--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-express-base-swe1",
   "version": "1.0.0",
   "description": "",
-  "main": ".eslintrc.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack_conf/webpack.prod.js"
@@ -56,6 +56,7 @@
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "valid-url": "^1.0.9"
   }
 }
